removed "Use RetroTxt as a local text file viewer"

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -136,15 +136,10 @@
                 <p class="mt-2 is-size-5">
                   You can use RetroTxt as a local text file viewer<span class="has-text-info">*</span>
                 </p>
+                <br>
                 <p>
                   Either, drag-and-drop text files to this browser<br>
                   Or use the <code class="file-url-scheme">file:///</code> URL scheme in a tab
-                </p>
-                <p class="mt-1" id="newInstallAsterisk"><small>* not all ANSI art files are usable</small></p>
-                <p class="mt-2" id="newInstallToUse">
-                  <span class="has-text-info">*</span> To use this feature, <em>Allow access to file URLs</em> needs
-                  to be enabled in the Extensions, RetroTxt Details<br>
-                  <code class="details-detail-url"></code>
                 </p>
               </div>
             </div>
@@ -172,7 +167,7 @@
                       <li><a href="https://bulma.io">Bulma CSS framework</a></li>
                     </ul>
                     <p class="menu-label">
-                      Link Conversion
+                      Hyperlink Conversion
                     </p>
                     <ul class="menu-list">
                       <li><a href="https://linkify.js.org">Linkify</a></li>
@@ -4010,30 +4005,6 @@
                       <button class="button option-theme is-ghost">Ghost</button>
                     </div>
                   </div>
-                </div>
-                <hr>
-                <!--use retrotxt as a local text file viewer -->
-                <div>
-                  <h2 class="title has-text-dark is-size-6 columns">
-                    <div class="column">
-                      Use RetroTxt as a local text file viewer
-                      <div class="subtitle has-text-dark is-size-7 has-text-justified mb-0">
-                        <p>You can use RetroTxt as a local text file viewer (though some ANSI art may not load).</p>
-                        <p class="mt-2">Either, drag-and-drop text files to this browser.</p>
-                        <p>Or use the <code class="file-url-scheme">file:///</code> URL scheme in a
-                          tab.</p>
-                      </div>
-                      <p name="is-off" class="is-hidden has-text-info has-text-weight-normal mt-2 is-size-7">
-                        To use this feature, <span class="has-text-weight-bold">Allow
-                          access to file URLs</span> needs to be enabled in the RetroTxt permissions.
-                      </p>
-                      <p name="is-on" class="is-hidden has-text-weight-normal mt-2 is-size-7">
-                        To turn off this feature, <span class="has-text-weight-bold">Allow access to file URLs</span>
-                        needs to be disabled in the RetroTxt permissions.
-                      </p>
-                      <p class="mt-2 is-size-7 is-hidden"><code class="details-detail-url"></code></p>
-                    </div>
-                  </h2>
                 </div>
               </div>
             </div>
