--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -4103,9 +4103,7 @@
                           class="has-text-grey">off</span></p>
                       <p name="is-off" class="is-hidden has-text-info has-text-weight-normal mt-2 is-size-7">
                         To use this feature, <span class="has-text-weight-bold">Allow access to file URLs</span>
-                        needs to be enabled in the RetroTxt permissions.
-                      </p>
-                      <p class="mt-2 is-size-7 is-hidden"><code class="details-detail-url" id="monitorDownloads"></code>
+                        needs to be enabled in the RetroTxt Extension Details.
                       </p>
                     </div>
                     <div class="column is-2">
