--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -125,13 +125,16 @@
             <div class="notice" style="display: none;" id="newInstallNotice">
               <div class="notification is-success is-light">
                 <p class="mb-2 is-size-2">Getting started</p>
-                <hr>
                 <p class="mt-2 is-size-5"><a id="newInstallSamples">There are dozens of sample text art files</a> to try
                   with RetroTxt!
                 </p>
                 <br>
                 <p class="mt-2 is-size-5"><a id="newInstallFonts">Choose a retro or modern font</a> for viewing text
                   files</p>
+                <br>
+                <p class="mt-2 is-size-5"><a href="https://docs.retrotxt.com/usage/first/" target="_blank">Read the
+                    first-time usage</a>
+                  documentation</p>
                 <br>
                 <p class="mt-2 is-size-5">
                   You can use RetroTxt as a local text file viewer<span class="has-text-info">*</span>
