recommend off for new update notices.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -4082,7 +4082,7 @@
                         when RetroTxt is updated.
                       </p>
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
-                          class="has-text-success">on</span></p>
+                          class="has-text-grey">off</span></p>
                     </div>
                     <div class="column is-2">
                       <div class="toggleswitch">
