Update changes and improvements for January 2024

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -125,22 +125,15 @@
             <div class="notice" style="display: none;" id="newInstallNotice">
               <div class="notification is-success is-light">
                 <p class="mb-2 is-size-2">Getting started</p>
-                <p class="mt-2 is-size-5"><a id="newInstallSamples">There are dozens of sample text art files</a> to try
-                  with RetroTxt!
+                <p class="mt-2 is-size-5">Read the <a href="https://docs.retrotxt.com/usage/first/" target="_blank">
+                    first-time usage documentation</a></p>
+                <p class="mt-2 is-size-5">There are dozens of <a id="newInstallSamples">sample text art files</a> to try
+                  with RetroTxt
                 </p>
-                <br>
-                <p class="mt-2 is-size-5"><a id="newInstallFonts">Choose a retro or modern font</a> for viewing text
-                  files</p>
-                <br>
-                <p class="mt-2 is-size-5"><a href="https://docs.retrotxt.com/usage/first/" target="_blank">Read the
-                    first-time usage</a>
-                  documentation</p>
-                <br>
                 <p class="mt-2 is-size-5">
-                  You can use RetroTxt as a local text file viewer<span class="has-text-info">*</span>
+                  You can use RetroTxt as a local text file viewer <span class="has-text-info">*</span>
                 </p>
-                <br>
-                <p>
+                <p class="mt-1">
                   Either, drag-and-drop text files to this browser<br>
                   Or use the <code class="file-url-scheme">file:///</code> URL scheme in a tab
                 </p>
