Fix RetroTxt options tab title and improve document titles

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../css/options.css" />
   <link rel="stylesheet" href="../css/text_colors.css" />
   <link rel="stylesheet" href="../css/fonts_ibm-scale-9x.css" />
-  <title>RetroTxt options</title>
+  <title>RetroTxt</title>
 </head>
 
 <body>
