Add Intel One Mono font by Intel Corp. Update README and options.html to include Intel One Mono font.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -229,6 +229,10 @@
                         <a href="https://github.com/IBM/plex"><strong>IBM Corp.</strong> Plex Mono</a>
                       </li>
                       <li>
+                        <a href="https://github.com/intel/intel-one-mono"><strong>Intel Corp.</strong> Intel One
+                          Mono</a>
+                      </li>
+                      <li>
                         <a href="https://aminet.net/package/comm/amiex/PottySrc"><strong>Leo Davidson/Nudel</strong>,
                           P0T-NOoDLE<p class="is-size-7">Commodore Amiga</p></a>
                       </li>
@@ -754,6 +758,29 @@
                     <label class="radio" for="cascadiacodepl">
                       <input type="radio" name="font" id="cascadiacodepl" value="cascadiacodepl"> <u>Code PL</u>
                       <small>with ligatures &amp; Powerline symbols</small>
+                    </label>
+                  </div>
+                  <hr>
+                  <h2 class="title has-text-dark is-size-6">
+                    Intel One Mono
+                    <a href="https://github.com/intel/intel-one-mono#readme" target="_blank">
+                      <svg role="img" class="material-icons has-text-info is-size-7">
+                        <use xlink:href="../assets/svg/material-icons.svg#info"></use>
+                      </svg>
+                    </a>
+                  </h2>
+                  <p class="subtitle has-text-dark is-size-7 mb-2">An expressive monospaced font family that's built
+                    with clarity, legibility, and the needs of developers in mind
+                  </p>
+                  <div class="control">
+                    <label class="radio" for="intelonemono">
+                      <input type="radio" name="font" id="intelonemono" value="intelonemono"> <u>Regular</u>
+                    </label>
+                    <label class="radio" for="intelonemonolight">
+                      <input type="radio" name="font" id="intelonemonolight" value="intelonemonolight"> <u>Light</u>
+                    </label>
+                    <label class="radio" for="intelonemonomedium">
+                      <input type="radio" name="font" id="intelonemonomedium" value="intelonemonomedium"> <u>Medium</u>
                     </label>
                   </div>
                   <hr>
