Add DOMPurify library for HTML sanitization

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -163,6 +163,12 @@
                       <li><a href="https://bulma.io">Bulma CSS framework</a></li>
                     </ul>
                     <p class="menu-label">
+                      HTML sanitizer
+                    </p>
+                    <ul class="menu-list">
+                      <li><a href="https://github.com/cure53/DOMPurify">DOMPurify</a></li>
+                    </ul>
+                    <p class="menu-label">
                       Hyperlink Conversion
                     </p>
                     <ul class="menu-list">
