Update font names in options.html

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -720,7 +720,7 @@
                     languages</p>
                   <hr>
                   <h2 class="title has-text-dark is-size-6">
-                    IBM Plex
+                    IBM Plex Mono
                     <a href="https://www.ibm.com/plex/specs" target="_blank">
                       <svg role="img" class="material-icons has-text-info is-size-7">
                         <use xlink:href="../assets/svg/material-icons.svg#info"></use>
@@ -732,13 +732,13 @@
                   </p>
                   <div class="control">
                     <label class="radio" for="ibmplexmono">
-                      <input type="radio" name="font" id="ibmplexmono" value="ibmplexmono"> <u>Mono Regular</u>
+                      <input type="radio" name="font" id="ibmplexmono" value="ibmplexmono"> <u>Regular</u>
                     </label>
                     <label class="radio" for="ibmplextlight">
-                      <input type="radio" name="font" id="ibmplextlight" value="ibmplextlight"> <u>Mono Light</u>
+                      <input type="radio" name="font" id="ibmplextlight" value="ibmplextlight"> <u>Light</u>
                     </label>
                     <label class="radio" for="ibmplextmedium">
-                      <input type="radio" name="font" id="ibmplextmedium" value="ibmplextmedium"> <u>Mono Medium</u>
+                      <input type="radio" name="font" id="ibmplextmedium" value="ibmplextmedium"> <u>Medium</u>
                     </label>
                   </div>
                   <hr>
@@ -2010,7 +2010,9 @@
                         </svg>
                       </a></label>
                     <hr>
-                    <h2 class="title has-text-dark is-size-6  mb-2">Sanyo MBC-16</h2>
+                    <h2 class="title has-text-dark is-size-6">Sanyo MBC-16</h2>
+                    <p class="subtitle has-text-dark is-size-7 mb-2">An early Japanese desktop range that is semi
+                      PC/XT-compatible</p>
                     <label class="radio" for="sanyombc16-2y">
                       <input type="radio" name="font" id="sanyombc16-2y" value="sanyombc16-2y"> SanyoMBC16-2y
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?sanyombc16-2y" target="_blank">
@@ -2303,7 +2305,9 @@
                       expands support to some 780 characters
                     </p>
                     <hr>
-                    <h2 class="title has-text-dark is-size-6  mb-2">Acer M3125 VGA</h2>
+                    <h2 class="title has-text-dark is-size-6">Acer M3125 VGA</h2>
+                    <p class="subtitle has-text-dark is-size-7 mb-2">A 16-bit ISA, VGA video card and chip with 256kB of
+                      video memory</p>
                     <label class="radio" for="acer_vga_8x8-2y">
                       <input type="radio" name="font" id="acer_vga_8x8-2y" value="acer_vga_8x8-2y"> Acer VGA 8x8-2y
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?acer_vga_8x8-2y" target="_blank">
