Add DOMPurify script and sanitize hostname input

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -4222,6 +4222,7 @@
   <script src="../scripts/sw/helpers.js"></script>
   <script src="../scripts/helpers.js"></script>
   <script src="../scripts/encoding.js"></script>
+  <script src="../js/purify.js"></script>
   <script src="../scripts/options.js"></script>
 </body>
 
