Update ANSI options in HTML file

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -3636,10 +3636,12 @@
                 <h1 class="title has-text-black-ter is-size-3 mt-4">ANSI</h1>
                 <!-- 80 column wrap -->
                 <h2 class="title has-text-dark is-size-6 columns mb-0">
-                  <div class="column">80 column wrap
-                    <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">Unless
-                      SAUCE width information exists, this enforces an 80-character width for all
-                      ANSI files to emulate the classic 80-column terminal screen.
+                  <div class="column">Column wrap <small>80-column</small>
+                    <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">Unless the <a
+                        href="https://www.acid.org/info/sauce/sauce.htm#FileType" class="has-text-link"
+                        target="_blank">SAUCE width</a>
+                      information exists, this option enforces an 80-character text width for all ANSI files to emulate
+                      the classic 80-column terminal screen.
                       <br><span class="has-text-info">Any open tabs will require a reload.</span>
                     </p>
                     <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
@@ -3656,10 +3658,10 @@
                 <!-- page wrap -->
                 <h2 class="title has-text-dark is-size-6 columns mb-0">
                   <div class="column">Page wrap
-                    <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">By design, ANSI text
-                      preserves white space sequences with any text-overflow reachable via horizontal
-                      scrollbars. With page wrap enabled, ANSI text will behave as HTML, where overflow lines can break
-                      to wrap the text.<br>Page wrap helps read <span class="msg-color">color</span>ed text
+                    <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">With page wrap enabled the ANSI
+                      text will behave as HTML, where overflow lines can break to wrap the text. Otherwise, ANSI
+                      text preserves white space sequences with any text-overflow reachable via browser
+                      scrollbars.<br>Page wrap helps read <span class="msg-color">color</span>ed text
                       and logs, but the <em>80-column wrap</em> should be off.</p>
                     <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend for artwork <span
                         class="has-text-grey">off</span></p>
@@ -3674,12 +3676,12 @@
                 <hr>
                 <!-- ice colors -->
                 <h2 class="title has-text-dark is-size-6 columns">
-                  <div class="column">Use iCE colors
+                  <div class="column">Non-blink mode <small>iCE color</small>
                     <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">ANSI offers 16 static
                       foreground <span class="msg-color">color</span>s, eight additional blinking foreground <span
                         class="msg-color">color</span>s, and eight background <span class="msg-color">color</span>s.
-                      The iCE Color mode, or the non-blink mode, replaces the eight blinking <span
-                        class="msg-color">color</span>s with eight replacement backgrounds.</p>
+                      The non-blink mode, replaces the eight blinking <span class="msg-color">color</span>s with eight
+                      replacement backgrounds.</p>
                     <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
                         class="has-text-success">on</span></p>
                   </div>
@@ -3816,8 +3818,8 @@
                       the <span class="msg-color">color</span>s it defines. These have always been left to the
                       hardware or software to interpret.
                       <br>
-                      Most artworks expect the IBM VGA palette.<br>
-                      Xterm is the standard terminal palette for X11 found on Linux, OpenVMS, etc.
+                      Most artworks expect the IBM VGA palette.
+                      Xterm is the standard terminal palette for X11 on Linux, OpenVMS, etc.
                     </p>
                     <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
                         class="has-text-info">ibm vga</span></p>
