Two fixes with page wrap and Hyperlink.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -3444,6 +3444,21 @@
                       </p>
                       <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
                           class="has-text-grey">off</span></p>
+                      <div class="field-body">
+                        <div class="field">
+                          <div class="control">
+                            <label class="checkbox">
+                              <input type="checkbox" id="hyperlinksValidate">
+                              Limit URLs
+                            </label>
+                          </div>
+                        </div>
+                      </div>
+                      <p class="subtitle has-text-dark is-size-7 mb-0 has-text-justified">
+                        This option forces Hyperlinks to only convert URLs that begin
+                        the http or https protocols. For example, <em>https://example.com</em> will
+                        be linked, while <em>example.com</em> won't.
+                      </p>
                     </div>
                     <div class="column is-2">
                       <div class="toggleswitch">
